- Added sample data for owners, items, menus, restaurants. Located in the resources/sql directory. - Updated dependencies. - Updated entity column names. - Removed Transactional annotations.
Passwords were encoded with the BCryptPasswordEncoder and included in the sql in the encrypted form.